src/scss/components/_content-card.scss
.content-card {
  max-width: rem(520px);

  &--big & {
    &__title {
      font-size: rem($font-size-56);
      line-height: rem($line-height-67);

      @media #{$screen-mobile} {
        @include text-title; 
      }
    }

    &__content {
      @media #{$screen-mobile} {
        @include text-m;        
      }
    }
  }

  &--centered {
    display: flex;
    flex-direction: column;
    align-items: center;

    max-width: rem(754px);

    text-align: center;
  }

  &--link {
    max-width: revert;
  }

  &--link & {
    &__content {
      &-text {
        max-width: rem(710px);
      }
    }
  }

  &__wrapper {
    display: flex;
    flex-direction: column;
    gap: rem($gap-m);
  }

  &__pill {
    align-self: flex-start;

    @media #{$screen-mobile} {
      align-self: center;
    }
  }
  
  &__title {
    @include text-title;
    @include multiline-text-truncate(4);

    margin: 0;

    @media #{$screen-mobile} {
      text-align: center;
    }
  }

  &__content {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: rem($gap-s);

    @media #{$screen-mobile} {
      text-align: center;
    }

    &-text {
      @include text-m;
      @include multiline-text-truncate(7);
  
      margin: 0;
    }

    &-button {
      flex-shrink: 0;
    }
  }
}

